--- a/app/views/info/faq.html.erb
+++ b/app/views/info/faq.html.erb
@@ -42,6 +42,14 @@
 </ul>
 
 <h3>How do I turn off the email notifications?</h3>
-<p>You can disabled email notifications by un-checking the "Send email notifications" check box in the Preferences page. Or, you can "un-sign-up" by deleting the Husage report for your Site ID, clicking the "Delete this report" in the Preferences page.
+<p>
+	First, if you're getting unnecessary email notices every hour, it might be because your Warning threshold is too low. Go into Preferences and adjust your Warning and Alert thresholds to values that are reasonable for your HughesNet subscription plan and FAP level.
+</p>
+<p>
+	You can disable all email notifications by un-checking the "Send email notifications" check box in the Preferences page.
+</p> 
+<p>
+	Or, if you don't want to use Husage anymore, you can "un-sign-up" by deleting the Husage report for your Site ID, clicking the "Delete this report" in the Preferences page.
+</p>
 	
 	
