--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
 	<%= f.label :site, 'HughesNet Site ID' %> <%= f.error_message_on :site %>
 	<%= form_help :site_ID %>	<br />
 	<%= f.text_field :site %><br/>
-  <span style="font-size:small; font-style:italic"><%= ApplicationHelper::HELP_TOPICS[:site_ID] %></span></br>
+  <span style="font-size:x-small; font-style:italic"><%= ApplicationHelper::HELP_TOPICS[:site_ID] %></span></br>
 	<br />
 	<br />
 	<%= f.label :email %> <%= f.error_message_on :email %>
